--- a/config/croogpad.conf
+++ b/config/croogpad.conf
@@ -1,3 +1,4 @@
+CONFIG_ZMK_SLEEP=y
 # Uncomment to turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
 
@@ -7,3 +8,11 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment to enable OLED
 CONFIG_ZMK_DISPLAY=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
