--- a/config/croogpad.conf
+++ b/config/croogpad.conf
@@ -1,4 +1,12 @@
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_USB=y
+
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+
 # Uncomment to turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
 
@@ -8,9 +16,6 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment to enable OLED
 CONFIG_ZMK_DISPLAY=y
-
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
